syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package PBMatch;

message TcpRequestMatch{
	int32 uid = 1;
	int32 roleID = 2;
}

message TcpCancelMatch{
	int32 uid = 1;
}

message TcpResponseRequestMatch{

}

message TcpResponseCancelMatch{
	
}